--- a/PetGuardWeb/src/main/webapp/master.xhtml
+++ b/PetGuardWeb/src/main/webapp/master.xhtml
@@ -15,20 +15,9 @@
 		content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
-
-	<link
-		href='https://fonts.googleapis.com/css?family=Roboto:400,300,500|Ubuntu+Condensed'
-		rel='stylesheet' type='text/css' />
-	<link rel="shortcut icon" type="image/x-icon"
-		href="resources/img/favicon.ico" />
-
-	<h:outputStylesheet name="css/bootstrap.min.css" />
-	<h:outputStylesheet name="css/main_base.css" />
-	<h:outputStylesheet name="css/font_ico.css" />
-	<ui:insert name="headCont"></ui:insert>
 	<div class="w3-top">
 		<div class="w3-bar w3-white w3-wide w3-padding w3-card">
-			<a href="#home" class="w3-bar-item w3-button"><b>UPC</b> PetGuard</a>
+			<a href="index.xhtml" class="w3-bar-item w3-button"><b>UPC</b> PetGuard</a>
 			<!-- Float links to the right. Hide them on small screens -->
 			<div class="w3-right w3-hide-small">
 				<a href="index.xhtml" class="w3-bar-item w3-button">Inicio</a> 
@@ -42,11 +31,8 @@
 <h:body>
 
 	<!-- seccion para el contenido -->
-
 	<ui:insert name="content">
 	</ui:insert>
 
-	<!--/container-->
-	<ui:insert name="footerCont"></ui:insert>
 </h:body>
 </html>
