--- a/PetGuardWeb/src/main/webapp/registrar.xhtml
+++ b/PetGuardWeb/src/main/webapp/registrar.xhtml
@@ -7,24 +7,14 @@
 
 <ui:composition template="master.xhtml">
 
-	<ui:define name="title">
-        .:Registro de usuario:.
-    </ui:define>
-
-	<ui:define name="titleCont">
-		<span>Usuario</span>
-	</ui:define>
-
 	<ui:define name="content">
-
 		<h:form>
 			<br />
 			<br />
 			<br />
 			<br />
 			<br />
-			<h:outputLabel for="id" value="Documento identidad"
-				styleClass="control-label" />
+			<h:outputLabel for="id" value="Documento identidad" styleClass="control-label" />
 			<p:inputText autocomplete="off" id="id" styleClass="form-control"
 				value="#{UsuarioController.u.CUsuario}" maxlength="8"
 				required="true" />
@@ -32,7 +22,7 @@
 			<h:outputLabel for="name" value="Nombres" styleClass="control-label" />
 			<p:inputText autocomplete="off" id="name" styleClass="form-control"
 				value="#{UsuarioController.u.NNombres}" maxlength="45"
-				required="true" />
+				required="true"/>
 			<br />
 			<h:outputLabel for="surname" value="Apellidos"
 				styleClass="control-label" />
@@ -56,8 +46,6 @@
 				showOn="button" timeZone="UTC" required="true">
 			</p:calendar>
 			<br />
-
-
 			<p:commandButton value="Guardar"
 				actionListener="#{UsuarioController.insert()}"
 				styleClass="btn btn-danger" update="@form"
