--- a/PetGuardWeb/src/main/webapp/registrar.xhtml
+++ b/PetGuardWeb/src/main/webapp/registrar.xhtml
@@ -14,40 +14,43 @@
 			<br />
 			<br />
 			<br />
-			<h:outputLabel for="id" value="Documento identidad" styleClass="control-label" />
+			<h:outputLabel for="id" value="Documento identidad"
+				styleClass="control-label" />
 			<p:inputText autocomplete="off" id="id" styleClass="form-control"
-				value="#{UsuarioController.u.CUsuario}" maxlength="8"
+				value="#{usuarioController.u.CUsuario}" maxlength="8"
 				required="true" />
 			<br />
 			<h:outputLabel for="name" value="Nombres" styleClass="control-label" />
 			<p:inputText autocomplete="off" id="name" styleClass="form-control"
-				value="#{UsuarioController.u.NNombres}" maxlength="45"
-				required="true"/>
+				value="#{usuarioController.u.NNombres}" maxlength="45"
+				required="true" />
 			<br />
 			<h:outputLabel for="surname" value="Apellidos"
 				styleClass="control-label" />
 			<p:inputText autocomplete="off" id="surname"
-				styleClass="form-control" value="#{UsuarioController.u.NApellidos}"
+				styleClass="form-control" value="#{usuarioController.u.NApellidos}"
 				maxlength="45" required="true" />
 			<br />
-			<h:outputLabel for="phone" value="Teléfono" styleClass="control-label" />
+			<h:outputLabel for="phone" value="Telefono"
+				styleClass="control-label" />
 			<p:inputText autocomplete="off" id="phone" styleClass="form-control"
-				value="#{UsuarioController.u.NTelefono}" maxlength="9"
+				value="#{usuarioController.u.NTelefono}" maxlength="9"
 				required="true" />
 			<br />
 			<h:outputLabel for="correo" value="Correo" styleClass="control-label" />
 			<p:inputText autocomplete="off" id="correo" styleClass="form-control"
-				value="#{UsuarioController.u.TCorreo}" maxlength="45"
+				value="#{usuarioController.u.TCorreo}" maxlength="45"
 				required="true" />
 			<br />
-			<h:outputLabel for="date" value="Fecha de nacimiento" styleClass="control-label" />
+			<h:outputLabel for="date" value="Fecha de nacimiento"
+				styleClass="control-label" />
 			<p:calendar id="date" pattern="dd/MM/yyyy"
-				value="#{UsuarioController.u.DFechaNacimiento}"
-				showOn="button" timeZone="UTC" required="true">
+				value="#{usuarioController.u.DFechaNacimiento}" showOn="button"
+				timeZone="UTC" required="true">
 			</p:calendar>
 			<br />
 			<p:commandButton value="Guardar"
-				actionListener="#{UsuarioController.insert()}"
+				actionListener="#{usuarioController.insert()}"
 				styleClass="btn btn-danger" update="@form"
 				action="listUsuario?faces-redirect=true" />
 			<p:commandButton value="Cancelar"
