--- a/PetGuardWeb/src/main/webapp/master.xhtml
+++ b/PetGuardWeb/src/main/webapp/master.xhtml
@@ -22,7 +22,7 @@
 			<div class="w3-right w3-hide-small">
 				<a href="index.xhtml" class="w3-bar-item w3-button">Inicio</a> 
 				<a href="registrar.xhtml" class="w3-bar-item w3-button">Registrar</a>
-				<a href="#login" class="w3-bar-item w3-button">Login</a>
+				<a href="login.xhtml" class="w3-bar-item w3-button">Login</a>
 			</div>
 		</div>
 	</div>
