--- a/PetGuardWeb/src/main/webapp/login.xhtml
+++ b/PetGuardWeb/src/main/webapp/login.xhtml
@@ -35,7 +35,7 @@
 				action="#{logincontroller.authentication()}" update=":frm"
 				styleClass="btn btn-primary" />
 			<p:commandButton value="Crear Usuario"
-				action="register?faces-redirect=true" immediate="true"
+				action="registrar?faces-redirect=true" immediate="true"
 				styleClass="btn btn-primary" />
 		</div>
 	</h:form>
